<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background_theme"
	android:orientation="vertical">

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="@color/main_theme">

		<ImageView
			android:id="@+id/back_btn"
			android:layout_width="@dimen/titlebar_back_size"
			android:layout_height="@dimen/titlebar_back_size"
			android:layout_gravity="left|center"
			android:adjustViewBounds="true"
			android:layout_marginHorizontal="@dimen/titlebar_btn_marginH"
			android:src="@drawable/ic_arrow_back_24px" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="Details"
			android:fontFamily="@font/lotte_dream_bold"
			android:textSize="@dimen/titlebar_title_text"
			android:textColor="#FFFFFF" />
	</FrameLayout>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingHorizontal="@dimen/medicine_paddingH"
			android:paddingVertical="@dimen/medicine_paddingV"
			android:clipToPadding="false">

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginBottom="@dimen/medicine_title_marginB">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:fontFamily="@font/lotte_dream_bold"
					android:textColor="@color/main_theme"
					android:textSize="@dimen/medicine_title_text"
					android:text="Medicine Name" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:elevation="@dimen/shadow_size"
				android:background="@drawable/search_result_item"
				android:padding="@dimen/medicine_content_padding">
				
				<TextView
					android:id="@+id/medicine_name"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="@dimen/medicine_context_distance"
					android:fontFamily="@font/nanum_square_ac"
					android:textColor="@color/text_color"
					android:textSize="@dimen/medicine_content_text"
					android:text="Medicine"/>

				<!--
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="@dimen/medicine_context_distance"
					android:fontFamily="@font/nanum_square_ac"
					android:textColor="@color/text_color_gray"
					android:textSize="@dimen/medicine_content_en_text"
					android:text="Medicine name"/>
				-->
			</LinearLayout>

			<LinearLayout
				android:id="@+id/effect_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="@dimen/medicine_title_marginT"
				android:layout_marginBottom="@dimen/medicine_title_marginB">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:fontFamily="@font/lotte_dream_bold"
					android:textColor="@color/main_theme"
					android:textSize="@dimen/medicine_title_text"
					android:text="@string/underline_medicine_effect" />

				<ImageView
					android:id="@+id/effect_icon"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:src="@drawable/arrow_down"
					android:adjustViewBounds="true"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/effect_content"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:elevation="@dimen/shadow_size"
				android:background="@drawable/search_result_item"
				android:padding="@dimen/medicine_content_padding"
				android:visibility="gone">

				<TextView
					android:id="@+id/medicine_effect"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="@dimen/medicine_context_distance"
					android:fontFamily="@font/nanum_square_ac"
					android:textColor="@color/text_color"
					android:textSize="@dimen/medicine_content_text"
					android:text="효능 및 효과"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/dosage_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="@dimen/medicine_title_marginT"
				android:layout_marginBottom="@dimen/medicine_title_marginB">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:fontFamily="@font/lotte_dream_bold"
					android:textColor="@color/main_theme"
					android:textSize="@dimen/medicine_title_text"
					android:text="@string/underline_medicine_dosage" />

				<ImageView
					android:id="@+id/dosage_icon"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:src="@drawable/arrow_down"
					android:adjustViewBounds="true"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/dosage_content"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:elevation="@dimen/shadow_size"
				android:background="@drawable/search_result_item"
				android:padding="@dimen/medicine_content_padding"
				android:visibility="gone">

				<TextView
					android:id="@+id/medicine_dosage"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="@dimen/medicine_context_distance"
					android:fontFamily="@font/nanum_square_ac"
					android:textColor="@color/text_color"
					android:textSize="@dimen/medicine_content_text"
					android:text="용법용량"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/validity_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="@dimen/medicine_title_marginT"
				android:layout_marginBottom="@dimen/medicine_title_marginB">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:fontFamily="@font/lotte_dream_bold"
					android:textColor="@color/main_theme"
					android:textSize="@dimen/medicine_title_text"
					android:text="@string/underline_medicine_validity" />

				<ImageView
					android:id="@+id/validity_icon"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:src="@drawable/arrow_down"
					android:adjustViewBounds="true"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/validity_content"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:elevation="@dimen/shadow_size"
				android:background="@drawable/search_result_item"
				android:padding="@dimen/medicine_content_padding"
				android:visibility="gone">

				<TextView
					android:id="@+id/medicine_validity"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="@dimen/medicine_context_distance"
					android:fontFamily="@font/nanum_square_ac"
					android:textColor="@color/text_color"
					android:textSize="@dimen/medicine_content_text"
					android:text="유효기간"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/preservation_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="@dimen/medicine_title_marginT"
				android:layout_marginBottom="@dimen/medicine_title_marginB">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:fontFamily="@font/lotte_dream_bold"
					android:text="@string/underline_medicine_preservation"
					android:textColor="@color/main_theme"
					android:textSize="@dimen/medicine_title_text" />

				<ImageView
					android:id="@+id/preservation_icon"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:src="@drawable/arrow_down"
					android:adjustViewBounds="true"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/preservation_content"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:elevation="@dimen/shadow_size"
				android:background="@drawable/search_result_item"
				android:padding="@dimen/medicine_content_padding"
				android:visibility="gone">

				<TextView
					android:id="@+id/medicine_preservation"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="@dimen/medicine_context_distance"
					android:fontFamily="@font/nanum_square_ac"
					android:textColor="@color/text_color"
					android:textSize="@dimen/medicine_content_text"
					android:text="보관법"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/warning_btn"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_marginTop="@dimen/medicine_title_marginT"
				android:layout_marginBottom="@dimen/medicine_title_marginB">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:fontFamily="@font/lotte_dream_bold"
					android:textColor="@color/warning_color"
					android:textSize="@dimen/medicine_title_text"
					android:text="@string/underline_medicine_warning" />

				<ImageView
					android:id="@+id/warning_icon"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:src="@drawable/arrow_down_warning"
					android:adjustViewBounds="true"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/warning_content"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:elevation="@dimen/shadow_size"
				android:background="@drawable/search_result_item"
				android:padding="@dimen/medicine_content_padding"
				android:visibility="gone">

				<TextView
					android:id="@+id/medicine_warning"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="@dimen/medicine_context_distance"
					android:fontFamily="@font/nanum_square_ac"
					android:textColor="@color/warning_color"
					android:textSize="@dimen/medicine_content_text"
					android:text="주의사항"/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
